# Start-Stop-System

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  default.profraw  mull.yml
src/Cluster_SIL/: .gitignore  CMakeLists.txt  readme.md
src/Cluster_SIL/linux_build/: CMakeCache.txt  ClusterSIL  Makefile  clustersil.desktop  clustersil_qmltyperegistrations.cpp  cmake_install.cmake  default.desktop  readme.md
src/Cluster_SIL/linux_build/.qt/: QtDeploySupport.cmake
src/Cluster_SIL/linux_build/.qt_plugins/: Qt6_QmlPlugins_Imports_ClusterSIL.cmake  Qt6_QmlPlugins_Imports_ClusterSIL.rsp
src/Cluster_SIL/linux_build/.rcc/: ClusterSIL_raw_qml_0.qrc  qmake_ClusterUI.qrc  qrc_ClusterSIL_raw_qml_0.cpp  qrc_qmake_ClusterUI.cpp
src/Cluster_SIL/linux_build/ClusterSIL_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/Cluster_SIL/linux_build/ClusterUI/: ClusterSIL.qmltypes  qmldir
src/Cluster_SIL/linux_build/lib/: libQt6Network.so.6  libQt6QmlModels.so.6  libQt6QmlWorkerScript.so.6  libQt6QuickControls2.so.6  libQt6QuickControls2Impl.so.6  libQt6QuickLayouts.so.6  libQt6QuickTemplates2.so.6  libcurl-gnutls.so.4  libduktape.so.207  liblber.so.2  libldap.so.2  librtmp.so.1  libsasl2.so.2  libssh.so.4  libsystemd.so.0
src/Cluster_SIL/linux_build/meta_types/: ClusterSIL_json_file_list.txt  ClusterSIL_json_file_list.txt.timestamp  qt6clustersil_release_metatypes.json.gen
src/Cluster_SIL/linux_build/squashfs-root/: .DirIcon  (+1 more)
src/Cluster_SIL/src/: ClusterBackend.cpp  ClusterBackend.h  main.cpp
src/Cluster_SIL/ui/: main.qml
(+324 files in other folders)
